--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -72,6 +72,10 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionNew">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/file-add-line.svg</normaloff>:/remixicons/images/remixicons/file-add-line.svg</iconset>
+   </property>
    <property name="text">
     <string>New</string>
    </property>
@@ -80,6 +84,10 @@
    </property>
   </action>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/file-3-line.svg</normaloff>:/remixicons/images/remixicons/file-3-line.svg</iconset>
+   </property>
    <property name="text">
     <string>Open</string>
    </property>
@@ -88,11 +96,19 @@
    </property>
   </action>
   <action name="actionAbout">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/information-line.svg</normaloff>:/remixicons/images/remixicons/information-line.svg</iconset>
+   </property>
    <property name="text">
     <string>About</string>
    </property>
   </action>
   <action name="actionSave">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/save-line.svg</normaloff>:/remixicons/images/remixicons/save-line.svg</iconset>
+   </property>
    <property name="text">
     <string>Save</string>
    </property>
@@ -101,6 +117,10 @@
    </property>
   </action>
   <action name="actionSave_As">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/save-2-line.svg</normaloff>:/remixicons/images/remixicons/save-2-line.svg</iconset>
+   </property>
    <property name="text">
     <string>Save As</string>
    </property>
@@ -109,6 +129,10 @@
    </property>
   </action>
   <action name="actionUndo">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/arrow-go-back-line.svg</normaloff>:/remixicons/images/remixicons/arrow-go-back-line.svg</iconset>
+   </property>
    <property name="text">
     <string>Undo</string>
    </property>
@@ -120,6 +144,10 @@
    </property>
   </action>
   <action name="actionRedo">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/remixicons/images/remixicons/arrow-go-forward-line.svg</normaloff>:/remixicons/images/remixicons/arrow-go-forward-line.svg</iconset>
+   </property>
    <property name="text">
     <string>Redo</string>
    </property>
@@ -131,6 +159,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
