--- a/src/ui/preferenceswindow.ui
+++ b/src/ui/preferenceswindow.ui
@@ -111,7 +111,7 @@
           <rect>
            <x>20</x>
            <y>30</y>
-           <width>422</width>
+           <width>171</width>
            <height>51</height>
           </rect>
          </property>
@@ -125,6 +125,28 @@
           </item>
           <item>
            <widget class="QFontComboBox" name="fontComboBox"/>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="horizontalLayoutWidget_3">
+         <property name="geometry">
+          <rect>
+           <x>200</x>
+           <y>30</y>
+           <width>161</width>
+           <height>51</height>
+          </rect>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>Font Size</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="spinBox"/>
           </item>
          </layout>
         </widget>
